--- a/source/_posts/单例设计模式.md
+++ b/source/_posts/单例设计模式.md
@@ -7,7 +7,7 @@ tags: python面向对象
 keywords: python,设计模式,单例
 ---
 
-需要全局的对象唯一的时候，使用单例设计模式，几乎是最简单的设计模式......:sleepy:，以下是代码部分
+需要全局的对象唯一的时候，使用单例设计模式，几乎是最简单的设计模式......​ ​ :sleepy:，以下是代码部分
 
 <!--more-->
 
