--- a/source/_posts/寻找数组的中心索引.md
+++ b/source/_posts/寻找数组的中心索引.md
@@ -43,9 +43,9 @@ nums = [1, 2, 3]
 
 **说明:**
 <div class="note info"><p>
-- `nums` 的长度范围为 `[0, 10000]`。
-- 任何一个 `nums[i]` 将会是一个范围在 `[-1000, 1000]`的整数。
-  </p></div>
+nums的长度范围为 [0, 10000]。
+任何一个 nums[i]将会是一个范围在 [-1000, 1000]的整数。
+</p></div>
 ###解题思路
 
 计算第i个位置左右两边的和比较一下就行了，右边=总和-当前位置值-当前位置左边的和
