--- a/source/_posts/欢迎来到我的博客.md
+++ b/source/_posts/欢迎来到我的博客.md
@@ -1,7 +1,8 @@
 ---
 title: 欢迎来到我的博客
-date: 2018/8/3 19:39:54
+date: 2018/3/1 15:13:14
 sticky: 10
+top: 100
 categories: 随笔
 tags: 
 - Face
@@ -10,6 +11,6 @@ keywords: 机器学习,python,博客,hexo
 
 {% cq %} 
 
-欢迎来到我的博客，希望这里面的内容对你有帮助！
+欢迎来到我的博客，希望这里面的内容对你有帮助！:laughing:
 
 {% endcq %} 
