--- a/source/_posts/交互式使用.md
+++ b/source/_posts/交互式使用.md
@@ -5,9 +5,9 @@ description: TensorFlow交互式会话
 categories: Tensorflow
 tags: 
 - Tensorflow
-- python
+- Python
 - 机器学习
-keywords: 机器学习,python,Tensorflow
+keywords: 机器学习,Python,Tensorflow
 ---
 
 文档中的 Python 示例使用一个会话 [`Session`](http://www.tensorfly.cn/tfdoc/api_docs/python/client.html#Session) 来 启动图, 并调用 [`Session.run()`](http://www.tensorfly.cn/tfdoc/api_docs/python/client.html#Session.run) 方法执行操作.
