--- a/source/_posts/单例设计模式.md
+++ b/source/_posts/单例设计模式.md
@@ -3,8 +3,8 @@ title: 单例设计模式
 date: 2018/8/8 21:15:36
 description: 单例模式
 categories: Python
-tags: python面向对象
-keywords: python,设计模式,单例
+tags: Python面向对象
+keywords: Python,设计模式,单例
 ---
 
 需要全局的对象唯一的时候，使用单例设计模式，几乎是最简单的设计模式......​ ​ :sleepy:，以下是代码部分
