--- a/themes/ym/languages/zh-Hans.yml
+++ b/themes/ym/languages/zh-Hans.yml
@@ -11,12 +11,13 @@ menu:
   archives: 归档
   categories: 分类
   tags: 标签
-  about: 关于
+  about: 关于我
   search: 搜索
   schedule: 日程表
   sitemap: 站点地图
   commonweal: 公益404
   top: 热门文章
+  links: 朋友圈
 
 sidebar:
   overview: 站点概览
